--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title></title>
 </head>
 <body>
-<p>"hey, look, we work"</p>
+<p th:text="${title}" ></p>
+<button th:text="${addButton}" onclick="window.location.href='adduser'"></button>
 </body>
 </html>
